moving builtin functions in a particular compile unit and manage parser::Statement to eval::Statement transformation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ set(SRCS
     
 set(LIBLOGO_SRCS
   src/parser.cpp src/memory.cpp
-  src/types.cpp src/eval.cpp)
+  src/types.cpp src/eval.cpp
+  src/builtin.cpp)
 
 add_library(${MLOGO_LIBRARY} ${LIBLOGO_SRCS})
 
