Implementing isWord/isList for valuebox and constructors. Adding some test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set(SRCS
     
 set(LIBLOGO_SRCS
   src/parser.cpp src/memory.cpp
-  src/types.cpp src/eval.cpp
+  src/types.cpp src/value.cpp src/eval.cpp
   src/graphics.cpp src/turtle.cpp
   src/builtin.cpp)
 
