--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,14 +36,15 @@ find_package(SDL2 REQUIRED)
 if(WITH_COVERAGE)
     find_program(GCOV_PATH gcov)
     find_program(LCOV_PATH lcov)
-endif()
 
-if(GCOV_PATH AND LCOV_PATH)
-    include(CodeCoverage)
-    APPEND_COVERAGE_COMPILER_FLAGS()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument")    
-else()
-    message(WARNING "Coverage disabled: install gcov/lcov")
+    if(GCOV_PATH AND LCOV_PATH)
+      include(CodeCoverage)
+      APPEND_COVERAGE_COMPILER_FLAGS()
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument")
+      set(ENABLE_COVERAGE YES)
+    else()
+      message(WARNING "Coverage disabled: install gcov/lcov")
+    endif()
 endif()
 
 if(WITH_WINDOW_ALWAYS_ON_TOP)
