--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,14 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
+      - gcc-6
+      - g++-6
+      - clang-4.0
       - cmake
+
+install: 
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+  - sudo update-alternatives --install /usr/bin/clan++ clang++ /usr/bin/clang++-4.0 90
 
 before_script:  
   - mkdir build
