--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
-language: cpp
+language:
+  - c
+  - cpp
 
-compiler:  gcc
+compiler: gcc
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-6
-      - g++-6
-      - cmake
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
 
-install: 
+install:
+  - sudo apt-get install -qq g++-6 gcc-6 cmake libboost-all-dev libsdl2
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 90
+  - gcc --version
+  - g++ --version
 
 before_script:  
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -DCMAKE_BUILD_TYPE=Release -DWITH_WINDOW_ALWAYS_ON_TOP=no ..
 
 script:
   - make
