travis reduce verbosity

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ install:
   - g++ --version
   - cmake --version
   - sudo wget -O boost_1_64_0.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
-  - sudo tar xzvf boost_1_64_0.tar.gz
+  - sudo tar xzf boost_1_64_0.tar.gz
   - cd boost_1_64_0/
   - sudo ./bootstrap.sh --with-libraries=program_options,filesystem,system
-  - ./b2 link=shared threading=multi variant=release
-  
+  - sudo ./b2 link=shared threading=multi variant=release
+
 before_script:  
   - mkdir build
   - cd build
