--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - sudo tar xzf boost_1_64_0.tar.gz
   - cd boost_1_64_0/
   - sudo ./bootstrap.sh --with-libraries=program_options,filesystem,system
-  - sudo ./b2 link=shared threading=multi variant=release
+  - sudo ./b2 link=shared threading=multi variant=release install
 
 before_script:  
   - mkdir build
