travis reduce verbosity

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,13 @@ install:
   - gcc --version
   - g++ --version
   - cmake --version
-  - sudo wget -O boost_1_64_0.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
-  - sudo tar xzf boost_1_64_0.tar.gz
+  - wget -O boost_1_64_0.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
+  - tar xzf boost_1_64_0.tar.gz
   - cd boost_1_64_0/
-  - sudo ./bootstrap.sh --with-libraries=program_options,filesystem,system
+  - ./bootstrap.sh --with-libraries=program_options,filesystem,system
   - sudo ./b2 link=shared threading=multi variant=release install
+  - cd ..
+  - sudo rm -rf boost_1_64* 
 
 before_script:  
   - mkdir build
