--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,32 @@ compiler: gcc
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  - sudo pip install codecov
 
 install:
-  - sudo apt-get install -qq g++-6 gcc-6 cmake libsdl2-dev
+  - sudo apt-get install -qq g++-6 gcc-6 lcov cmake libsdl2-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 90
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
   - gcc --version
   - g++ --version
   - cmake --version
+  - lcov --version
   - wget -O boost_1_64_0.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
   - tar xzf boost_1_64_0.tar.gz
   - cd boost_1_64_0/
   - ./bootstrap.sh --with-libraries=program_options,filesystem,system
-  - sudo ./b2 link=shared threading=multi variant=release install
+  - sudo ./b2 link=shared threading=multi variant=release install > boost.compile.log
   - cd ..
   - sudo rm -rf boost_1_64* 
 
 before_script:  
   - mkdir build
   - cd build
-  - cmake -DCMAKE_BUILD_TYPE=Debug -DWITH_WINDOW_ALWAYS_ON_TOP=no ..
+  - cmake -DCMAKE_BUILD_TYPE=Debug -DWITH_WINDOW_ALWAYS_ON_TOP=no -DWITH_COVERAGE=yes ..
 
 script:
-  - make
-  - test/mlogo_test
+  - make mlogo_test_coverage
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
