--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,13 @@ before_install:
   - sudo pip install codecov
 
 install:
-  - sudo apt-get install -qq g++-6 gcc-6 lcov cmake libsdl2-dev
+  - sudo apt-get install -qq g++-6 gcc-6 cmake libsdl2-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 90
   - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
   - gcc --version
   - g++ --version
   - cmake --version
