--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
-language:
-  - c
-  - cpp
-
+sudo: require
+language: cpp
 compiler: gcc
 
 before_install:
@@ -9,7 +7,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get install -qq g++-6 gcc-6 cmake libsdl2-dev
+  - sudo apt-get install -qq g++-6 cmake libsdl2-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 90
   - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
