--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler: gcc
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
+  - sudo apt-get update 
 
 install:
   - sudo apt-get install -qq g++-6 cmake libsdl2-dev
