--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
       - g++-6
       - gcc-6
       - cmake
-      - libsdl2
+      - libsdl2-dev
 
 install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
