--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,6 @@ matrix:
         env:
           - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && BOOST_VER=1.64.0"
 
-    - os: osx
-      osx_image: xcode8
-      env:
-        - MATRIX_EVAL="brew install gcc && brew install cmake && brew install libsdl2 && CC=gcc-6 && CXX=g++-6 && && BOOST_VER=1.64.0"
-
-    - os: osx
-      osx_image: xcode8.3
-      env:
-        - MATRIX_EVAL="brew install cmake && brew install libsdl2 && BOOST_VER=1.64.0"
-
 before_install:
   - eval "${MATRIX_EVAL}"
 
@@ -46,13 +36,13 @@ install:
   - tar xf lcov_1.13.orig.tar.gz
   - sudo make -C lcov-1.13/ install
   - sudo pip install codecov
-  - wget -O boost_${BOOST_VER}.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
-  - tar xzf boost_${BOOST_VER}.tar.gz
-  - cd boost_${BOOST_VER}/
+  - wget -O boost_$BOOST_VER.tar.gz http://sourceforge.net/projects/boost/files/boost/$BOOST_VER/boost_$BOOST_VER.tar.gz/download
+  - tar xzf boost_$BOOST_VER.tar.gz
+  - cd boost_$BOOST_VER
   - ./bootstrap.sh --with-libraries=program_options,filesystem,system
   - sudo ./b2 link=shared threading=multi variant=release install > boost.compile.log
   - cd ..
-  - sudo rm -rf boost_${BOOST_VER}* 
+  - sudo rm -rf boost_$BOOST_VER
 
 before_script:  
   - mkdir build
