--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
             - cmake
             - libsdl2-dev
         env:
-          - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6 && BOOST_VER=1.64.0"
+          - MATRIX_EVAL="export CC=gcc-6; export CXX=g++-6; export BOOST_VER=1.64.0"
 
     - os: linux
       addons:
@@ -26,7 +26,7 @@ matrix:
             - libsdl2-dev
             - llvm
         env:
-          - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && BOOST_VER=1.64.0"
+          - MATRIX_EVAL="export CC=clang-4.0;export CXX=clang++-4.0;export BOOST_VER=1.64.0"
 
 before_install:
   - eval "${MATRIX_EVAL}"
