--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
             - cmake
             - libsdl2-dev
       env:
-        - CC=gcc-6 CXX=g++-6 BOOST_VER=1.64.0
+        - CC=gcc-6 CXX=g++-6 BOOST_VER=64
 
     - os: linux
       addons:
@@ -26,16 +26,16 @@ matrix:
             - libsdl2-dev
             - llvm
       env:
-        - CC=clang-4.0 CXX=clang++-4.0 BOOST_VER=1.64.0
+        - CC=clang-4.0 CXX=clang++-4.0 BOOST_VER=64
 
 install:
   - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz
   - tar xf lcov_1.13.orig.tar.gz
   - sudo make -C lcov-1.13/ install
   - sudo pip install codecov
-  - wget -O "boost_$BOOST_VER.tar.gz" "http://sourceforge.net/projects/boost/files/boost/$BOOST_VER/boost_$BOOST_VER.tar.gz/download"
-  - tar xzf "boost_$BOOST_VER.tar.gz"
-  - cd "boost_$BOOST_VER"
+  - wget -O "boost_1_$BOOST_VER_0.tar.gz" "http://sourceforge.net/projects/boost/files/boost/1.$BOOST_VER.0/boost_1_$BOOST_VER_0.tar.gz/download"
+  - tar xzf "boost_1_$BOOST_VER_0.tar.gz"
+  - cd "boost_1_$BOOST_VER_0"
   - ./bootstrap.sh --with-libraries=program_options,filesystem,system
   - sudo ./b2 link=shared threading=multi variant=release install > boost.compile.log
   - cd ..
