--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
             - cmake
             - libsdl2-dev
       env:
-        - MATRIX_EVAL="CC=gcc-6;CXX=g++-6"
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
     - os: linux
       addons:
@@ -26,12 +26,12 @@ matrix:
             - libsdl2-dev
             - llvm
       env:
-        - MATRIX_EVAL="CC=clang-4.0;CXX=clang++-4.0"
+        - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
 
 before_install:
   - exec "${MATRIX_EVAL}"
-  - ${CC} -v
-  - ${CXX} -v
+  - $CC -v
+  - $CXX -v
 
 install:
   - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz
