switch from test_value to test_types

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ set(TEST_SRC
   src/test_parser.cpp           # test for parser
   src/test_memory.cpp           # test for memory
   src/test_eval.cpp             # test for eval
-  src/test_value.cpp            # test for value
+  src/test_types.cpp            # test for types
   src/test_geometry.cpp         # test for geometry
 )
 
