implementation of form: missing testing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,7 @@ set(TEST_SRC
     src/test_types.cpp            # test for types
     src/test_geometry.cpp         # test for geometry
     src/test_interpreter.cpp      # test for interpreter /* high level test */
-    src/builtin/test_arithmetic.cpp)
+    src/builtin/test_arithmetic.cpp src/builtin/test_comm.cpp)
 
 
 # Set-up
